# Empilhadeira

./: APRESENTACAO_SPEC.md  README.md  requirements.txt
src/: .env.example  .example  .gitignore  ACHADOS_SIM.md  AGENTS.md  README.md  RELATORIO_SIM.md  pyproject.toml
src/docs/: architecture.md  camera-calibration.md  dock-to-tag.md  hardware-bring-up.md  hardware-deployment.md  hardware-interfaces.md  maps.md  mission.md  modules-io-reference.md  navigation.md  readiness-sim-to-real.md  real-robot-test-plan.md  serial-protocol.md  simulation.md  simulator-to-real.md  verification-status.md
src/firmware/: README.md  platformio.ini
src/firmware/src/: config.h  encoders.cpp  encoders.h  main.cpp  motors.cpp  motors.h  pid.cpp  pid.h  protocol.cpp  protocol.h
src/frontend/: .env.local  README.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
src/frontend/src/: App.jsx  endpoints.js  main.jsx
src/pi/: README.md  teste_cam.py
src/pi/app/: __init__.py  config.py  main.py  models.py  state.py
src/pi/calibracao/: camera_intrinsics.json
src/pi/maps/: arena_grande_com_grafo.json  arena_media.json  corredor_6tags.json  corredor_6tags_80x160.json  corredor_6tags_80x200.json  corredor_pequeno.json
src/pi/tests/: compare_nav.py  full_trace.py  sim_sweep.py  sim_trace.py  test_control_loop.py  test_crc8.py  test_dock_to_tag.py  test_ekf.py  test_firmware_emulator.py  test_gyro_calibration.py  test_integration_sim.py  (+15 more)
src/scripts/: bench_setpoint.py  check_apriltag_vision.py  flash_firmware.sh  run_pi.sh  verify.sh
(+93 files in other folders)
